--- a/index.qmd
+++ b/index.qmd
@@ -24,20 +24,15 @@ editor:
 
 These are the two papers I looked at thus far that I wanted to discuss and make a note of since they both compliment each other well. The first paper [@Abeysekera2009] was helpful when understanding the baseline of Cox Proportional Hazard model. It uses the model to check if the Proportional Hazards Assumptions are true. In order to test this they used the the global goodness-of-fit test proposed by Schoenfeld. The authors used an example from a clinical study involving heroin addicts who were getting methadone treatments. There were three components that were looked at which were the highest meth dose, addicts with a criminal record vs not, and how long they were treated at a clinic. What I really enjoyed about this paper and what I want to make note of is the math and coding behind the method. It explained it really well and included the code on the bottom of the paper. The second link was different but also helpful as well [@Fan2002]. The purpose of this one is to discuss variable selection techniques to the Cox Proportional Hazard model. I wanted to note this one since this can help my partner and I when it comes to approaching a data set and identifying the most important predictors. This paper doesn't go into particular depth of a hazard model like the first one. However, it shows the mathematical reasoning to choose a predictor and the outcome of the model when using their approach. 
 
-### Jasmine's Week 3
-
 The first article I read was the Cox Proportional Hazards model used for predictive analysis of the energy consumption of healthcare buildings[@Ben-Assuli2023]. The goal of paper was to analyze and predict excessive energy consumption in healthcare buildings. The parameters that were studied was building construction, facilities, demographics and climate. The authors took these variables in order to see the what effects it has to energy overconsumption. The importance of the paper is to find ways for spending on energy as well as analyzing the key facts or consumption in healthcare buildings. The study was done on 64 healthcare buildings in Spain and used the Cox Proportional Hazards model to analyze. The model was adapted to predict energy overconsumption which I thought was interesting route to take for the study. The two variables that ended up being significant was demographic and facilities. I would like to note that this was only conducted in Spain’s region so the demographic column might not be a reliable factor. Also, this was a different approach in using Cox Proportional Hazard model. 
 
 The second article I read was Utilizing shared frailty with the Cox proportional hazards regression: Post discharge survival analysis of CHF patients[@Gonzalez-Dominguez2022]. The goal of the paper is is to find the survival probability of patients with congestive heart failure and identify the factors affecting their early mortality within 90 days after hospital discharge. This paper is interesting because it uses survival analysis with Cox proportional hazards model as well as comparing it with a shared frailty correction. After further research not his I found that shared frailty correction is a technique used in survival analysis to account for unobserved or variability among subjects in a study that can effect their risk of an event. Unlike the Cox Proportional Hazards model, it assumes that the hazard ratios for different individuals are constant over time and that each observation is independent. The dataset that was used for the study was from the Israeli Sheba Medical Center and used variables such as patients records with demographic, clinical, medical and lab test data for a total of 18 variables. The authors found that shared frailty correction significantly improves the Cox Proportional model especially with dependent observations. This is a model I feel like would be beneficial in our capstone to utilize since it can further improve our model. 
 
-### Jasmine's Week 4
 
 This paper has used a different set of data utilizing the Cox Proportional Hazard model[@Equeter2020]. It focuses on predicting the Mean Up Time of cutting tool insets based on a single cutting parameter: cutting speed. They employed the model for the predication and did so by transforming the data. Although I was confused at the use of the Cox Proportional Hazard model, the authors thought it was a good fit for assessing tool lifespan and has been used in previous machining studies. The first step the author does is generate degradation paths using a gamma process. The gamma process is employed to generate a set of tool lifetimes. Another part that I was surprised in was the author used a logarithmic transformation of cutting speed in order to improve in prediction performance. In addition, the author uses a piecewise stochastic model for flank wear in order to see the effects at the beginning to the end of the tool life. This paper is helpful when looking at appropriate data for using the Cox Proportional Hazard model. I would like to revisit it when my partner and I want to pick a data set as it sets out important notes to consider such as data transformation, logarithmic transformation and size of the data.
 
 This paper showed the method and the coding for the Cox Proportional Hazard[@Faruk2018]. The researchers used data from the 2012 Indonesian Demographic and Health Survey for the first birth interval. They compared the performance of the model to the three accelerated failure time models by Weibull, exponential and log-normal distributions. The data was assessed for violations of the assumption through log cumulative hazard plots and statistical tests. In the paper, one shortfall that I feel wasn't addressed was the results of the analysis of the data. It was discussed how they employed the log cumulative hazard plots and Goodness-Of-Fit test. The analysis identified significant covariates, including women's education level, husband's education level, contraceptive knowledge, access to mass media, wealth index, and employment status.
 
-
-### Halley Week 2
 
 Summary: This article discusses how Cox proportional methods are used in a study of post-surgical patients with stage 3 lung cancer[Deo2021]. The authors calculated the survival estimates using the Kaplan-Meier estimates, which I discuss and reference in a different article. They used log-rank test to compare the survival rates between the two groups (males and females). They discuss the advantages and disadvantages of using log-rank test. Then they discuss the assumptions of the CPH test and how it is advantageous for clinical research. They observed that patients that are the same age, females have a 41% reduced risk of mortality and a 1 unit increase in age increases the risk of mortality by 1%.
 
@@ -45,13 +40,10 @@ Summary: The authors use the Rossi data set in the carData package in R[Fox2023]
 
 Summary: This article goes into depth on what the log-rank test is that I mentioned above[Bland2004]. It is used to compare the survival rates between two groups. The log-rank test gives a comparison at some arbitraty point in the point, instead of comparing the whole survival time to one another. The log-rank test is also based on the same assumptions as the Kaplan test. The log-rank test is also more likely to detect a different in the groups when the risk for the outcome of interest is higher in one of the groups. 
 
-### Halley's Week 3
 
 Summary: The goal of this study is to see whether hazard ration, relative risk, and other estimates made by the Cox Proportional Hazards model are biased when the basic assumptions of the model are violated[@Abeysekera2009]. This is very important because whenever regression models are run, not just Cox Proportional Hazards models, many times we take for granted that the assumptions of the model are met. This can lead to incorrect conclusions and predictions. The Cox model assumes that the hazard ratios remain constant over time. If this is violated, then the model may falsely suggest that a variable is significant or vice versa. This study showed an example where the hazards ratio is not constant over time. An example was with the age of smokers and the RR as age increased. As there was an increase in cumulative smoking exposure, the RR decrease after 50. It was also addressed how in the Cox PH model, there is increased emphasis on the Relative Risk. This is convenient because it doesn't require estimating background information. They first examined survival curves by smoking status and then compared a simulated data set could define mortality to a real data set. They found that single minded focus on PH models have hindered the development of other models in epidemiologic data. Sometimes hazard functions, rather than the rate of hazard functions may be a better alternative. 
 
 Summary: The goal of this paper is very similar to the first study[@Kuitunen2021]. It investigates, in detail, the reporting of the model details as well as the model assumptions with total joint arthroplasty studies. Nearly 80% of the Cox proportional hazards were reported inadequately. However, it is still amongst the most used models. One of the solutions was to hire statisticians to review the process and make sure reproducible results are created. 
-
-### Halley's Week 4
 
 Summary: This article tests the strength of proportional hazards in total joint arthroplasty studies[@Ponkilainene2021]. They found a total of 1154 studies by searching for "cox" AND "hazard" in the abstract. The abstract also had to meet the following criteria: the topic must be on 
 knee or hip joint arthroplasty, survival analysis was used, and a hazard ratio was reported. If those criteria were met, the entire article was read. Nearly 80% of the published TJA survival studies reported proportional hazard assumptions of the Cox regression model 
@@ -113,7 +105,7 @@ library(gtsummary)
 library(gt)
 library(htmlTable)
 library(IRdisplay)
-data <- read.csv("C:/Users/DeleeuwH/Documents/Seer_updated.csv")
+data <- read.csv("Seer_updated.csv")
 
 
 df <- data %>%
